--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "test:hil": "tsdx test --testMatch '<rootDir>/hiltest/*.ts'",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "start": "dts watch",
+    "build": "dts build",
+    "test": "dts test",
+    "test:hil": "dts test --testMatch '<rootDir>/hiltest/*.ts'",
+    "lint": "dts lint src test hiltest",
+    "prepare": "dts build"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "dts lint src test hiltest"
     }
   },
   "prettier": {
@@ -38,13 +37,13 @@
   "devDependencies": {
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
-    "husky": "^7.0.4",
-    "tsdx": "^0.14.1",
+    "dts-cli": "^2.0.5",
+    "husky": "^9.1.4",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4"
   },
   "resolutions": {
-    "**/@typescript-eslint/eslint-plugin": "^4.1.5",
-    "**/@typescript-eslint/parser": "^4.1.5"
+    "**/@typescript-eslint/eslint-plugin": "^5.0.0",
+    "**/@typescript-eslint/parser": "^5.0.0"
   }
 }
