--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "motionblinds",
-  "author": "John Hurliman",
+  "name": "@vben19/motionblinds",
+  "author": "Benjamin V (VBen)",
   "homepage": "https://github.com/jhurliman/node-motionblinds",
   "module": "dist/motionblinds.esm.js",
   "devDependencies": {
@@ -42,8 +42,15 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4"
   },
-  "resolutions": {
-    "**/@typescript-eslint/eslint-plugin": "^5.0.0",
-    "**/@typescript-eslint/parser": "^5.0.0"
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/VBen/node-motionblinds.git"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "bugs": {
+    "url": "https://github.com/VBen/node-motionblinds/issues"
   }
 }
